<resources>
    <string name="app_name">Course</string>
    <string name="add_course">添加课程</string>
    <string name="delete_course">删除课程</string>
    <string name="find_all_courses">查看课程信息</string>
    <string name="course_name_title">课程名称</string>
    <string name="label_course_date">课程日期</string>
    <string name="label_course_time">课程时间</string>
    <string name="label_course_teacher">授课老师</string>
    <string name="label_course_room">授课教室</string>
</resources>