<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateCourseActivity">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:text="@string/course_name_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        app:layout_constraintStart_toEndOf="@id/course_name"
        app:layout_constraintTop_toTopOf="@id/course_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/course_date"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:text="@string/label_course_date"
        app:layout_constraintTop_toBottomOf="@id/course_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        app:layout_constraintTop_toTopOf="@id/course_date"
        app:layout_constraintStart_toEndOf="@id/course_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/course_time"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:text="@string/label_course_time"
        app:layout_constraintTop_toBottomOf="@id/course_date"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        app:layout_constraintStart_toEndOf="@id/course_time"
        app:layout_constraintTop_toTopOf="@id/course_time"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/course_teacher"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:text="@string/label_course_teacher"
        app:layout_constraintTop_toBottomOf="@id/course_time"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/teacher"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        app:layout_constraintStart_toEndOf="@id/course_teacher"
        app:layout_constraintTop_toTopOf="@id/course_teacher"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/course_room"
        android:layout_width="@dimen/label_width"
        android:layout_height="@dimen/label_height"
        android:text="@string/label_course_room"
        app:layout_constraintTop_toBottomOf="@id/course_teacher"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/room"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        app:layout_constraintStart_toEndOf="@id/course_room"
        app:layout_constraintTop_toTopOf="@id/course_room"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="text"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>
